--- a/InvisibleBattlefields/README
+++ b/InvisibleBattlefields/README
@@ -1,7 +1,7 @@
 # Utilizando a API REST
 
-export registry_host="registry.vm"
-#export registry_host="localhost"
+export ibf_host="ibf.vm"
+#export ibf_host="localhost"
 
 
 # Create node
@@ -12,19 +12,19 @@ curl \
   --header 'Content-type: application/json' \
   --request POST \
   --data '{"uuid":"1234","name":"teste","info":"some_data"}' \
-  http://$registry_host/api/nodes
+  http://$ibf_host/api/nodes
 # Cria node teste1
 curl \
   --header 'Content-type: application/json' \
   --request POST \
   --data '{"uuid":"111","name":"teste1","info":"some_data1"}' \
-  http://$registry_host/api/nodes
+  http://$ibf_host/api/nodes
 # Cria node teste2
 curl \
   --header 'Content-type: application/json' \
   --request POST \
   --data '{"uuid":"222","name":"teste2","info":"some_data2"}' \
-  http://$registry_host/api/nodes
+  http://$ibf_host/api/nodes
 
 
 # Retrieve node
@@ -33,11 +33,11 @@ curl \
 # Recupera teste pelo name
 curl \
   --request GET \
-  http://$registry_host/api/nodes/teste
+  http://$ibf_host/api/nodes/teste
 # Recupera teste pelo uuid
 curl \
   --request GET \
-  http://$registry_host/api/nodes/1234
+  http://$ibf_host/api/nodes/1234
 
 
 # Nodes list
@@ -46,7 +46,7 @@ curl \
 # Lista todos os nodes com todos seus atributos
 curl \
   --request GET \
-  http://$registry_host/api/nodes
+  http://$ibf_host/api/nodes
 
 
 # Search nodes
@@ -55,11 +55,11 @@ curl \
 # Procura pela substring "tes" que vai casar com alguns usuários
 curl \
   --request GET \
-  http://$registry_host/api/nodes/search/tes
+  http://$ibf_host/api/nodes/search/tes
 # Procura pela substring "1" que vai casar com alguns uuids
 curl \
   --request GET \
-  http://$registry_host/api/nodes/search/1
+  http://$ibf_host/api/nodes/search/1
 
 
 # Update node
@@ -70,21 +70,21 @@ curl \
   --header 'Content-type: application/json' \
   --request PUT \
   --data '{"uuid":"1234","name":"teste","info":"some_other_data"}' \
-  http://$registry_host/api/nodes/teste
+  http://$ibf_host/api/nodes/teste
 # Mostra uma consulta com os dados atualizados para o node teste
 curl \
   --request GET \
-  http://$registry_host/api/nodes/teste
+  http://$ibf_host/api/nodes/teste
 # Atualiza o node teste pelo uuid
 curl \
   --header 'Content-type: application/json' \
   --request PUT \
   --data '{"uuid":"1234","name":"teste","info":"some_yet_other_data"}' \
-  http://$registry_host/api/nodes/1234
+  http://$ibf_host/api/nodes/1234
 # Mostra uma consulta com os dados atualizados para o node teste
 curl \
   --request GET \
-  http://$registry_host/api/nodes/teste
+  http://$ibf_host/api/nodes/teste
 
 
 # Delete node
@@ -93,16 +93,16 @@ curl \
 # Deleta o node teste pelo name
 curl \
   --request DELETE \
-  http://$registry_host/api/nodes/teste
+  http://$ibf_host/api/nodes/teste
 # Faz uma consulta que não mais encontra o node recém deletado
 curl \
   --request GET \
-  http://$registry_host/api/nodes/teste
+  http://$ibf_host/api/nodes/teste
 # Deleta o node teste1 pelo uuid
 curl \
   --request DELETE \
-  http://$registry_host/api/nodes/111
+  http://$ibf_host/api/nodes/111
 # Faz uma consulta que não mais encontra o node recém deletado
 curl \
   --request GET \
-  http://$registry_host/api/nodes/teste1
+  http://$ibf_host/api/nodes/teste1
