Pequenas melhorias na tela de cadastro, titulo e descricao dos clans

--- a/InvisibleBattlefieldsClient/res/values/strings.xml
+++ b/InvisibleBattlefieldsClient/res/values/strings.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- General App Stuff-->
     <string name="app_name">InvisibleBattlefields_concept</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="ok">OK</string>
     
     <!-- Login Screen -->
     <string name="login">Email</string>
@@ -30,10 +32,9 @@
         <item>The Mercenaries</item>
         <item>The Berserkers</item>
     </string-array>
-    
     <string-array name="clan_description_array">
         <item>The Conglomerate of Warriors have served the government as a main striking force against rebels for centuries. You are a warrior from The Union, the most prestigious class of combatents of the Conglomerate, fighting to maintain peace on the Colonies against rebel and barbarian strikes. </item>
-        <item>A rebel force to be reckoned with. The Mercenaries started long ago as, well, a guild of mercenaries, but since the Great Purge, they work as a common force against the conservative government. You, as a free fighter, battle to regain your lost territory, and your freedom.</item>
+        <item>A rebel force to be reckoned with. The Mercenaries started long ago as, well, a guild of mercenaries. But since the Great Purge, they work as a common force against the conservative government. You, as a free fighter, battle to regain your lost territory, and your freedom.</item>
         <item>The Berserkers have lived on the Invisible Plains for milenia. They battle only for themselves and won\'t bow to none. You\'re an honored Berserker, fighting to maintain your lands against people who will do whatever they can to take it from you.</item>
     </string-array>
 </resources>
