inclusao de novas telas e refatoracao de algumas classes de interface

--- a/InvisibleBattlefieldsClient/res/values/strings.xml
+++ b/InvisibleBattlefieldsClient/res/values/strings.xml
@@ -18,6 +18,11 @@
     <string name="placeholder_name">Name!</string>
     <string name="placeholder_level">Lvl: 5</string>
     <string name="placeholder_winstreak">Won 8 battles</string>
+    <string name="prefix_name"></string>
+    <string name="prefix_level">Lvl:</string>
+    <string name="prefix_winstreak">Won</string>
+    <string name="sufix_winstreak">battles</string>
+    
     
     <!-- Registration Screen -->
     <string name="register">Register!</string>
